@@ -11,9 +11,11 @@ import java.io.FileReader;
 import java.io.IOException;
 import java.util.HashMap;
 import java.util.HashSet;
+import java.util.List;
 import java.util.Map;
 import java.util.logging.Level;
 
+import org.apache.commons.io.IOUtils;
 import org.apache.poi.ss.usermodel.Cell;
 import org.apache.poi.ss.usermodel.Row;
 import org.apache.poi.ss.usermodel.Sheet;
@@ -27,7 +29,10 @@ import org.springframework.stereotype.Service;
 
 import com.alibaba.fastjson.JSON;
 import com.alibaba.fastjson.TypeReference;
+import com.fasterxml.jackson.databind.JavaType;
+import com.fasterxml.jackson.databind.ObjectMapper;
 import com.linkedin.automation.CommonSetting;
+import com.linkedin.automation.HuntingCompany;
 import com.linkedin.jpa.entity.Phone;
 import com.linkedin.jpa.entity.Profile;
 import com.linkedin.jpa.service.CompanyService;
@@ -200,41 +205,53 @@ public class LinkedinSpiderHttpMain {
 //		LinkedInOutputKeeper keeper = new LinkedInOutputKeeper();
 //		keeper.start();
 
-		String[] letters = { "a", "b", "c", "d", "e", "f", "g", "h", "i", "j", "k", "l", "m", "n", "o", "p", "q", "r",
-				"s", "t", "u", "v", "w", "x", "y", "z" };
-		Integer[] industry = { 1, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26,
-				27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52,
-				53, 54, 55, 56, 57, 58, 59, 60, 61, 62, 63, 64, 65, 66, 67, 68, 69, 70, 71, 72, 73, 74, 75, 76, 77, 78,
-				79, 80, 81, 82, 83, 84, 85, 86, 87, 88, 89, 90, 91, 92, 92, 93, 94, 95, 96, 97, 98, 99, 100, 101, 102,
-				103, 104, 105, 106, 107, 108, 109, 110, 111, 112, 113, 114, 115, 116, 117, 118, 119, 120, 121, 122, 123,
-				124, 125, 126, 127, 128, 129, 130, 131, 132, 133, 134, 135, 136, 137, 138, 139, 140, 141, 142, 143, 144,
-				145, 146, 147, 148 };
-		for (String letter : letters) {
-			for (Integer in : industry) {
-
-//				spider.addUrl("https://www.linkedin.com/search/results/people/?"
-//						+ "facetNetwork=%5B%22F%22%5D&keywords=" + "A" + "&origin=FACETED_SEARCH");
-
-				String url = "https://www.linkedin.com/search/results/people/?facetIndustry=%5B%22" + in
-						+ "%22%5D&facetNetwork=%5B%22F%22%5D&keywords=" + letter + "&origin=FACETED_SEARCH";
-				String pageNumber = SpiderConstants.jedis_master.get(url);
-				if (pageNumber == null) {
-					spider.addUrl(url);
-				} else {
-					String[] pageNumberGroup = pageNumber.split(":");
-					String currentPage = pageNumberGroup[0];
-					String totalPage = pageNumberGroup[1];
-					if (!currentPage.equalsIgnoreCase(totalPage)) {
-						spider.addUrl(url + "&page=" + currentPage);
-					}
-
-					if (totalPage.equalsIgnoreCase("-1")) {
-						SpiderConstants.jedis_master.del(url);
-					}
-				}
-
-			}
+//		String[] letters = { "a", "b", "c", "d", "e", "f", "g", "h", "i", "j", "k", "l", "m", "n", "o", "p", "q", "r",
+//				"s", "t", "u", "v", "w", "x", "y", "z" };
+//		Integer[] industry = { 1, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26,
+//				27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52,
+//				53, 54, 55, 56, 57, 58, 59, 60, 61, 62, 63, 64, 65, 66, 67, 68, 69, 70, 71, 72, 73, 74, 75, 76, 77, 78,
+//				79, 80, 81, 82, 83, 84, 85, 86, 87, 88, 89, 90, 91, 92, 92, 93, 94, 95, 96, 97, 98, 99, 100, 101, 102,
+//				103, 104, 105, 106, 107, 108, 109, 110, 111, 112, 113, 114, 115, 116, 117, 118, 119, 120, 121, 122, 123,
+//				124, 125, 126, 127, 128, 129, 130, 131, 132, 133, 134, 135, 136, 137, 138, 139, 140, 141, 142, 143, 144,
+//				145, 146, 147, 148 };
+//		for (String letter : letters) {
+//			for (Integer in : industry) {
+//
+////				spider.addUrl("https://www.linkedin.com/search/results/people/?"
+////						+ "facetNetwork=%5B%22F%22%5D&keywords=" + "A" + "&origin=FACETED_SEARCH");
+//
+//				String url = "https://www.linkedin.com/search/results/people/?facetIndustry=%5B%22" + in
+//						+ "%22%5D&facetNetwork=%5B%22F%22%5D&keywords=" + letter + "&origin=FACETED_SEARCH";
+//				String pageNumber = SpiderConstants.jedis_master.get(url);
+//				if (pageNumber == null) {
+//					spider.addUrl(url);
+//				} else {
+//					String[] pageNumberGroup = pageNumber.split(":");
+//					String currentPage = pageNumberGroup[0];
+//					String totalPage = pageNumberGroup[1];
+//					if (!currentPage.equalsIgnoreCase(totalPage)) {
+//						spider.addUrl(url + "&page=" + currentPage);
+//					}
+//
+//					if (totalPage.equalsIgnoreCase("-1")) {
+//						SpiderConstants.jedis_master.del(url);
+//					}
+//				}
+//
+//			}
+//		}
+		
+		File huntingFirmFile = new File(CommonSetting.cookieFilePrefix + "huntingfirmsPureCode.txt");
+		ObjectMapper mapper = new ObjectMapper();
+		JavaType firmType = mapper.getTypeFactory().constructParametricType(List.class, HuntingCompany.class);
+		SpiderConstants.firmsSet = (List<HuntingCompany>) mapper.readValue(huntingFirmFile, firmType);
+		for (HuntingCompany firm : SpiderConstants.firmsSet) {
+			
+			//
+			String url = "https://www.linkedin.com/search/results/people/?facetCurrentCompany=%5B%22"+firm.getCode()+"%22%5D&facetNetwork=%5B%22F%22%5D&origin=FACETED_SEARCH"+"&page="+firm.getCurrentPage();
+			spider.addUrl(url);
 		}
+
 
 		File file = new File("C:\\Profiles\\profiles.txt");
 		if (file.exists()) {
@@ -242,8 +259,7 @@ public class LinkedinSpiderHttpMain {
 			try {
 				fos = new FileInputStream(file);
 				BufferedInputStream bos = new BufferedInputStream(fos);
-				byte[] bytes = bos.readAllBytes();
-				String profilesStr = new String(bytes);
+				String profilesStr = IOUtils.toString(bos);
 				Map<String, Profile> profiles = JSON.parseObject(profilesStr,
 						new TypeReference<HashMap<String, Profile>>() {
 						});
@@ -280,7 +296,6 @@ public class LinkedinSpiderHttpMain {
 					}
 					br.close();
 					fr.close();
-
 				}
 
 				System.out.print("\r\n");
@@ -289,7 +304,7 @@ public class LinkedinSpiderHttpMain {
 				e.printStackTrace();
 			}
 		}
-		
+
 		String longStr = JSON.toJSONString(SpiderConstants.profiles);
 //		String longStr = JSON.toJSONString(SpiderConstants.profiles,
 //				SerializerFeature.DisableCircularReferenceDetect);
